--- a/javascripts.html
+++ b/javascripts.html
@@ -1,1 +1,15 @@
+<!DOCTYPE HTML>
+<html>
 
+  <head>
+    <meta charset="utf-8">
+    <title>My Javascript</title>
+  </head>
+  
+  <body>
+    <img src="csc106_banner.jpeg">
+    <h1>My Javascript</h1>
+    Back to <a href="index.html">Home Page</a>
+  </body>
+
+</html>
