--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   
   <body>
-    <img src="https://github.com/matthewcarroll2020/matthewcarroll2020.github.io/blob/main/csc106_banner.jpg">
+    <img src="csc106_banner.jpg">
     <h1>My HTML Site</h1>
   </body>
 
