--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   
   <body>
     <img src="csc106_banner.jpg">
+      <table>
+        <thead>
+          <tr>
+            <th>
     <h1>My HTML Site</h1>
   </body>
 
