--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <table>
         <thead>
           <tr>
-            <th>
+            <th><img src="pasted image 0.png"></th>
+            <th><img src="pasted image 0 (1).png"></th>
+            <th><img src="pasted image 0 (2).png"></th>
     <h1>My HTML Site</h1>
   </body>
 
