--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <th><img src="pasted image 0.png"></th>
             <th><img src="pasted image 0 (1).png"></th>
             <th><img src="pasted image 0 (2).png"></th>
+          </tr>
+        </thead>
+      </table>
     <h1>My HTML Site</h1>
   </body>
 
