--- a/javascripts.html
+++ b/javascripts.html
@@ -8,6 +8,17 @@
   
   <body>
     <img src="csc106_banner.jpeg">
+    
+    <table>
+        <thead>
+          <tr>
+            <th><img src="pasted image 0.png"></th>
+            <th><img src="pasted image 0 (1).png"></th>
+            <th><img src="pasted image 0 (2).png"></th>
+          </tr>
+        </thead>
+      </table>
+    
     <h1>My Javascript</h1>
     Back to <a href="index.html">Home Page</a>
   </body>
