--- a/about.html
+++ b/about.html
@@ -1,1 +1,26 @@
+<!DOCTYPE HTML>
+<html>
 
+  <head>
+    <meta charset="utf-8">
+    <title>About Me</title>
+  </head>
+  
+  <body>
+    <img src="csc106_banner.jpeg">
+    
+    <table>
+        <thead>
+          <tr>
+            <th><img src="pasted image 0.png"></th>
+            <th><img src="pasted image 0 (1).png"></th>
+            <th><img src="pasted image 0 (2).png"></th>
+          </tr>
+        </thead>
+      </table>
+    
+    <h1>About Me!</h1>
+    Back to <a href="index.html">Home Page</a>
+  </body>
+
+</html>
