--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
       <table>
         <thead>
           <tr>
-            <th><img src="pasted image 0.png"></th>
-            <th><img src="pasted image 0 (1).png"></th>
+            <th><a href="index.html">
+              <img src="pasted image 0.png"></a></th>
+            <th><a href="javascripts.html">
+              <img src="pasted image 0 (1).png"></a></th>
             <th><img src="pasted image 0 (2).png"></th>
           </tr>
         </thead>
