--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
       <table>
         <thead>
           <tr>
-            <th><a href="index.html">
-              <img src="pasted image 0.png"></a></th>
-            <th><a href="javascripts.html">
-              <img src="pasted image 0 (1).png"></a></th>
-            <th><img src="pasted image 0 (2).png"></th>
+            <th>
+              <a href="index.html">
+              <img src="pasted image 0.png"></a>
+            </th>
+            <th>
+              <a href="javascripts.html">
+              <img src="pasted image 0 (1).png"></a>
+            </th>
+            <th>
+              <a href="about.html">
+              <img src="pasted image 0 (2).png"></a>
+            </th>
           </tr>
         </thead>
       </table>
