--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     <h2>About Me!</h2>
     
     <p>Hello all!<br>My name is Matt and I am a Junior at URI.<br>I have switched my majors a few times but have always loved computers and software so I believe computer science is
-    perfect for me!<br>I enjoy fishing and weightlifting as well. I fish both fresh and saltwater and love to cook fish fish and seafood when I get a good catch!</p>
+    perfect for me!<br>I enjoy fishing and weightlifting as well. I fish both fresh and saltwater and love to cook fresh fish and seafood when I get a good catch!</p>
     
     Back to <a href="index.html">Home Page</a>
   </body>
