--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <head>
     <meta charset="utf-8">
     <title>Matt's Site</title>
+    <style>
+      body {background-color: rgb(164,219,232);
+    
+    </style>
   </head>
   
   <body>
