--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
               <a href="about.html">
               <img src="About Me.png"></a>
             </th>
+            <th>
+              <a href="apps.html">
+              <img src="Apps.png"></a>
+            </th>
           </tr>
         </thead>
       </table>
