--- a/javascripts.html
+++ b/javascripts.html
@@ -14,15 +14,19 @@
           <tr>
             <th>
               <a href="index.html">
-              <img src="pasted image 0.png"></a>
+              <img src="home.png"></a>
             </th>
             <th>
               <a href="javascripts.html">
-              <img src="pasted image 0 (1).png"></a>
+              <img src="Javascripts.png"></a>
             </th>
             <th>
               <a href="about.html">
-              <img src="pasted image 0 (2).png"></a>
+              <img src="About Me.png"></a>
+            </th>
+            <th>
+              <a href="apps.html">
+              <img src="Apps.png"></a>
             </th>
           </tr>
         </thead>
