--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Matt's Site</title>
     <style>
-      body {background-color: rgb(164,219,232);
+      body {background-color: rgb(164,219,232);}
       
       #nav-table { width: 800px;}
       
