--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       #nav-table {width: 800px;}
       
       #nav-td {width: 200px; 
+        color: blue;
         text-align:center;}
       
       #para {width: 800px;
