--- a/apps.html
+++ b/apps.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>My Apps</title>
     
+    <style>
      #nav-table {width: 1024px;}
       
       #nav-td {width: 256px;
