--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <h2>Welcome Everyone to my HTML Site!</h2>
     
     <div id="para">
-    <p>Hello everyone!<br>This is my HTML site with access to my Javascripts and an about me page!<br>
-       Come along as I journey through csc 106 and explore the endless possibilities of coding.</p>
+    <p>Hello everyone! This is my HTML site with access to my Javascripts and an about me page! 
+      Come along as I journey through csc 106 and explore the endless possibilities of coding.</p>
     </div>
     
   </body>
