--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
   <body>
     <img src="myBanner.jpg">
     
-    <img src="
+    <img src="Matt.jpg" id="Matt">
     
       <table id="nav-table">
         <thead>
