--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   </head>
   
   <body>
-    <img src="myBanner.jpg">
+    <img src="myBanner.jpg" id="banner">
     
     <img src="Matt.jpg" id="Matt">
     
