--- a/about.html
+++ b/about.html
@@ -22,7 +22,10 @@
   </head>
   
   <body>
-    <img src="myBanner.jpg" id="banner">
+    <img src="myBanner.jpg" 
+         position: relative;
+         top: 5px;
+         id="banner">
     
     <img src="Matt.jpg" 
          width="200px"
