--- a/about.html
+++ b/about.html
@@ -20,11 +20,11 @@
       #matt {
         float: left;
         margin-right: 6px;
-        margin-bottom: 6px;
+        margin-bottom: 4px;
       }
       
       #matt2 {
-        float: right;
+        float: left;
         margin-right: 6px;
         margin-bottom: 6px;
       }
