--- a/about.html
+++ b/about.html
@@ -82,8 +82,8 @@
          id="albie">
       Hello all! My name is Matt and I am a Junior at URI. I have switched my majors a few times but have always loved computers and software so I believe computer science is
     perfect for me! I enjoy fishing and weightlifting as well. I fish both fresh and saltwater and love to cook fresh fish and seafood when I get a good catch! 
-    As you can probably assume by my pictures, fishing is my favorite and I have recently been doing much more saltwater fishing compared to fresh. 
-    The first picture is me and a false albacore and the second is my first atlantic bonito cuaght on fly tackle!
+    As you can probably assume by my pictures, fishing is my favorite and I have recently been doing much more saltwater fishing compared to freshwater. 
+    The first picture is me and a false albacore and the second is my first atlantic bonito caught on fly tackle!
       <img src="Matt2.jpg" 
          width="120px"
          id="matt2">
