--- a/about.html
+++ b/about.html
@@ -85,7 +85,8 @@
       Hello all! My name is Matt and I am a Junior at URI. I have switched my majors a few times but have always loved computers and software so I believe computer science is
     perfect for me! I enjoy fishing and weightlifting as well. I fish both fresh and saltwater and love to cook fresh fish and seafood when I get a good catch! 
     As you can probably assume by my pictures, fishing is my favorite and I have recently been doing much more saltwater fishing compared to freshwater. 
-    The first picture is me and a false albacore and the second is my first atlantic bonito caught on fly tackle!
+    The first picture is me and a false albacore and the second is my first atlantic bonito caught on fly tackle! The third picture is a 100 pound brwon shark 
+    that I caught on the beach in Cape Cod. The fourth is another picture of a beautiful false albacore.
       <img src="Matt2.jpg" 
          width="100px"
          id="matt2">
