--- a/javascripts.html
+++ b/javascripts.html
@@ -52,6 +52,8 @@
     <h2><a href="https://www.khanacademy.org/computer-programming/carroll_bitmoji/5745658654408704">Carroll_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/carroll_bitmoji/5745658654408704/embed.js?editor=no&buttons=no&author=no&embed=yes"></script> 
     <h2><a href="https://www.khanacademy.org/computer-programming/carroll_dancingbitmoji/5875531452563456">Carroll_dancingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/carroll_dancingbitmoji/5875531452563456/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     <h2><a href="https://www.khanacademy.org/computer-programming/carroll_racingbitmoji/6231635781009408">Carroll_racingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/carroll_racingbitmoji/6231635781009408/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+    <h2><a href="https://www.khanacademy.org/computer-programming/carroll_racingbitmojifun/6450667914313728">Carroll_racingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/carroll_racingbitmojifun/6450667914313728/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>
+    <h2><a href="https://www.khanacademy.org/computer-programming/carroll_resizebitmoji/6675645549035520">Carroll_resizeBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/carroll_resizebitmoji/6675645549035520/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     
   </body>
 
