--- a/javascripts.html
+++ b/javascripts.html
@@ -54,6 +54,8 @@
     <h2><a href="https://www.khanacademy.org/computer-programming/carroll_racingbitmoji/6231635781009408">Carroll_racingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/carroll_racingbitmoji/6231635781009408/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     <h2><a href="https://www.khanacademy.org/computer-programming/carroll_racingbitmojifun/6450667914313728">Carroll_racingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/carroll_racingbitmojifun/6450667914313728/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>
     <h2><a href="https://www.khanacademy.org/computer-programming/carroll_resizebitmoji/6675645549035520">Carroll_resizeBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/carroll_resizebitmoji/6675645549035520/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+    <h2><a href="https://www.khanacademy.org/computer-programming/carroll_decision/5381161578184704">Carroll_decision</a></h2><script src="https://www.khanacademy.org/computer-programming/carroll_decision/5381161578184704/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+    <h2><a href="https://www.khanacademy.org/computer-programming/carroll_follow/4807208522530816">Carroll_Follow</a></h2><script src="https://www.khanacademy.org/computer-programming/carroll_follow/4807208522530816/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     
   </body>
 
