--- a/javascripts.html
+++ b/javascripts.html
@@ -56,6 +56,7 @@
     <h2><a href="https://www.khanacademy.org/computer-programming/carroll_resizebitmoji/6675645549035520">Carroll_resizeBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/carroll_resizebitmoji/6675645549035520/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     <h2><a href="https://www.khanacademy.org/computer-programming/carroll_decision/5381161578184704">Carroll_decision</a></h2><script src="https://www.khanacademy.org/computer-programming/carroll_decision/5381161578184704/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     <h2><a href="https://www.khanacademy.org/computer-programming/carroll_follow/4807208522530816">Carroll_Follow</a></h2><script src="https://www.khanacademy.org/computer-programming/carroll_follow/4807208522530816/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+    <h2><a href="https://www.khanacademy.org/computer-programming/carroll_zoo/4635203487711232">Carroll_zoo</a></h2><script src="https://www.khanacademy.org/computer-programming/carroll_zoo/4635203487711232/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     
   </body>
 
