--- a/javascripts.html
+++ b/javascripts.html
@@ -60,6 +60,7 @@
     <h2><a href="https://www.khanacademy.org/computer-programming/carroll_tag/5664036965892096">Carroll_tag</a></h2><script src="https://www.khanacademy.org/computer-programming/carroll_tag/5664036965892096/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     <h2><a href="https://www.khanacademy.org/computer-programming/carroll_contacts/6315586583314432">Carroll_contacts</a></h2><script src="https://www.khanacademy.org/computer-programming/carroll_contacts/6315586583314432/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     <h2><a href="https://www.khanacademy.org/computer-programming/carroll_education/5976807572029440">Carroll_education</a></h2><script src="https://www.khanacademy.org/computer-programming/carroll_education/5976807572029440/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+    <h2><a href="https://www.khanacademy.org/computer-programming/carroll_frogger/5313178937901056">Carroll_frogger</a></h2><script src="https://www.khanacademy.org/computer-programming/carroll_frogger/5313178937901056/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     
   </body>
 
