--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
               <a href="apps.html">
               <img src="Apps.png"></a>
             </th>
+            <th id="nav-td">
+              <a href="finalProject.html">
+              <img src="Final Project.png"></a>
+            </th>
           </tr>
         </thead>
       </table>
